--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "author": "Theo Ephraim <theozero@gmail.com> (http://theoephraim.com)",
+  "author": "Theo Ephraim <theozero@gmail.com> (https://theoephraim.com)",
   "name": "google-spreadsheet",
-  "description": "Google Spreadsheets Data API -- simple interface to read/write rows/cells, manage sheets",
-  "version": "2.0.8",
+  "description": "Google Spreadsheets API -- simple interface to read/write data and manage sheets",
+  "version": "3.0.0",
   "license": "Unlicense",
   "keywords": [
     "google spreadsheets",
@@ -24,17 +24,33 @@
     "node": ">=0.8.0"
   },
   "dependencies": {
-    "async": "^1.3.0",
-    "google-auth-library": "^0.10.0",
-    "lodash": "^4.17.15",
-    "request": "^2.69.0",
-    "xml2js": "~0.4.0"
+    "async": "^3.1.0",
+    "axios": "^0.19.0",
+    "google-auth-library": "^5.6.1",
+    "googleapis": "^45.0.0",
+    "lodash": "^4.17.15"
   },
   "devDependencies": {
-    "chai": "^3.5.0",
-    "mocha": "^5.2.0"
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-prettier": "^6.9.0",
+    "eslint-plugin-async-await": "0.0.0",
+    "eslint-plugin-import": "^2.20.0",
+    "eslint-plugin-jest": "^23.6.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "jest": "^24.9.0",
+    "prettier": "^1.19.1"
   },
   "scripts": {
-    "test": "node_modules/.bin/mocha"
+    "test": "jest --runInBand",
+    "lint": "eslint ./",
+    "lint:fix": "eslint ./ --fix"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/",
+      "/examples/"
+    ]
   }
 }
