--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "author": "Theo Ephraim <theozero@gmail.com> (http://theoephraim.com)",
-  "name": "google-spreadsheet",
+  "name": "aquaminer/google-spreadsheet",
   "description": "Google Spreadsheets Data API -- simple interface to read/write rows/cells, manage sheets",
   "version": "2.0.8",
   "license": "Unlicense",
@@ -14,20 +13,19 @@
     "api",
     "google sheets"
   ],
-  "homepage": "https://github.com/theoephraim/node-google-spreadsheet",
+  "homepage": "https://github.com/aquaminer/node-google-spreadsheet",
   "repository": {
     "type": "git",
-    "url": "git://github.com/theoephraim/node-google-spreadsheet.git"
+    "url": "git://github.com/aquaminer/node-google-spreadsheet.git"
   },
   "main": "index.js",
   "engines": {
-    "node": ">=0.8.0"
+    "node": ">=10.0.0"
   },
   "dependencies": {
-    "async": "^1.3.0",
+    "axios": "^0.19.2",
     "google-auth-library": "^0.10.0",
     "lodash": "^4.17.15",
-    "request": "^2.69.0",
     "xml2js": "~0.4.0"
   },
   "devDependencies": {
